<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    tools:context=".fragments.NoConnectionFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/no_connection_image"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_error" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/no_connection"
        android:textAppearance="?attr/textAppearanceTitleLarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_connection_retry"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        android:textColor="?android:attr/textColorHint" />

    <Button
        android:id="@+id/retry"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/action_retry" />

</androidx.appcompat.widget.LinearLayoutCompat>